--- a/sd/demo.ipynb
+++ b/sd/demo.ipynb
@@ -5,7 +5,16 @@
    "execution_count": null,
    "id": "65b55ecd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG] Loaded encoder.py from: /Users/ericdu/Desktop/LAB/StableDiffusion/sd/encoder.py\n",
+      "Using device cpu\n"
+     ]
+    }
+   ],
    "source": [
     "import model_loader\n",
     "import pipeline\n",
@@ -16,7 +25,7 @@
     "DEVICE = \"cpu\"\n",
     "\n",
     "ALLOW_CUDA = False\n",
-    "ALLOW_MPS = True\n",
+    "ALLOW_MPS = False\n",
     "\n",
     "if torch.cuda.is_available() and ALLOW_CUDA:\n",
     "    DEVICE = \"cuda\"\n",
@@ -39,7 +48,7 @@
     "input_image = None\n",
     "image_path = \"../images/puppies.jpeg\"\n",
     "# input_image = Image.open(image_path)\n",
-    "#strength = 0.9\n",
+    "strength = 0.9\n",
     "\n",
     "sampler = \"ddpm\"\n",
     "num_inference_steps = 50\n",
@@ -48,14 +57,42 @@
     "output_image = pipeline.generate(\n",
     "    prompt=prompt,\n",
     "    uncond_prompt = uncond_prompt,\n",
+    "    input_image=input_image,\n",
+    "    strength=strength,\n",
+    "    do_cfg=do_cfg,\n",
+    "    cfg_scale=cfg_scale,\n",
+    "    sampler_name=sampler,\n",
+    "    n_inference_steps=num_inference_steps,\n",
+    "    seed=seed,\n",
+    "    models=models,\n",
+    "    device=DEVICE,\n",
+    "    idle_device=\"cpu\",\n",
+    "    tokenizer=tokenizer\n",
     "\n",
-    ")"
+    "\n",
+    ")\n",
+    "\n",
+    "Image.fromarray(output_image)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv311",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
